SimpleComplex/Config 1.x, 2017-09-02
------------------------------------
- ConfigKey accommodated to fit altered Cache\CacheKey.

SimpleComplex/Config 1.x, 2017-08-30
------------------------------------
- README supposedly complete.

SimpleComplex/Config 1.x, 2017-08-27
------------------------------------
- Cache store name prefix is now 'config.'; was 'config_'.
- New CLI command config-list-stores.

SimpleComplex/Config 1.x, 2017-08-24
------------------------------------
- CLI commands must respect new command 'silent' property.
- CLI 'get' command default to print instead default to return the value.

SimpleComplex/Config 1.x, 2017-08-23
------------------------------------
- Important: ini based configuration must use (look for)
  .[config store name].ini files; not simply .ini files.
- Class constant IniConfigBase::FILE_EXTENSTIONS no longer exists.

SimpleComplex/Config 1.x, 2017-08-19
------------------------------------
- IniSectionedConfig shan't delete the whole section upon just because the key
  to be deleted is the last in the array.
  And it shan't do anything at all if the key doesn't exist.

SimpleComplex/Config 1.x, 2017-08-17
------------------------------------
- Export ini file based configuration: sort by section.

SimpleComplex/Config 1.x, 2017-08-10
------------------------------------
- Clarified a EnvConfig and EnvSectionedConfig's getInstance() methods;
  which btw only makes sense because these two classes are singleton'ish.

SimpleComplex/Config 1.x, 2017-08-08
------------------------------------
- Renamed ConfigException (from ConfigurationException) to stress that it should
  only be used within this package.

SimpleComplex/Config 1.x, 2017-08-04
------------------------------------
- .ini files within same path append to eachother, whereas later path(s)
  override previous (base) path(s); the use of array_merge_recursive()
  and array_replace_recursive() is deliberate and not a mistake.

SimpleComplex/Config 1.x, 2017-07-20